--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
 
 script:
   - docker --version # print the version for logging
-  - docker build -t simple-node .
+  - docker build -t simple-node --build-arg VALUE=${VALUE} .
   - docker tag simple-node feliciodeangela/simple-node:latest
 
 after_success:
